# sound_processor

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: am_filter.h  ampl_filter.h  application.h  argument_parser.h  cmd_line_args_2_pipeline_converter.h  filter_descriptor.h  filter_producers.h  fm_filter.h  ifilter.h  pipeline.h  silence_filter.h  sin_gen_filter.h  timestretch_filter.h  wav_reader.h  wav_writer.h  wave_reader.h  wave_structures.h  waveform.h
include/filters/: abstract_generator_filter.h  ampl_filter.h  filter_descriptor.h  filter_producers.h  generator_filter.h  lowpass_filter.h  normalize_filter.h  silence_filter.h
src/: am_filter.cpp  ampl_filter.cpp  application.cpp  argument_parser.cpp  cmd_line_args_2_pipeline_converter.cpp  filter_producers.cpp  fm_filter.cpp  main.cpp  pipeline.cpp  silence_filter.cpp  sin_gen_filter.cpp  timestretch_filter.cpp  wav_reader.cpp  wav_writer.cpp  wave_reader.cpp  waveform.cpp
src/filters/: ampl_filter.cpp  filter_producers.cpp  generator_filter.cpp  lowpass_filter.cpp  normalize_filter.cpp  silence_filter.cpp  timestretch_filter.cpp
tests/: CMakeLists.txt  mock_filter.h  test_am_filter.cpp  test_ampl_filter.cpp  test_args_parser.cpp  test_converter.cpp  test_fm_filter.cpp  test_generator_filter.cpp  test_lowpass_filter.cpp  test_normalize_filter.cpp  test_pipeline.cpp  test_silence_filter.cpp  test_sin_gen_filter.cpp  test_timestretch_filter.cpp  test_wav_reader.cpp  test_wav_writer.cpp  test_waveform.cpp
